--- a/client/stylesheets/shared/_reset.scss
+++ b/client/stylesheets/shared/_reset.scss
@@ -17,12 +17,9 @@
 		.wp-responsive-open #wpbody {
 			right: -14.5em;
 		}
-		#wpcontent {
-			min-height: calc(100vh - #{$adminbar-height-mobile});
-		}
-
+		#wpcontent,
 		#wpbody-content {
-			min-height: 100vh;
+			min-height: calc(100vh - #{$adminbar-height-mobile});
 		}
 	}
 
